# chapman_mgsc_310

./: README.md  pyproject.toml
notebooks/: eda.ipynb
qdrant_storage/: raft_state.json
src/: main.py
