[tool.poetry]
name = "chapman-mgsc-310"
version = "0.1.0"
description = ""
authors = ["Ben Labaschin <benjaminlabaschin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.4,<3.13"
fastapi = "^0.104.1"
pandas = "^2.1.3"
pydantic = "^2.5.2"
jupyter = "^1.0.0"
ipykernel = "^6.26.0"
huggingface = "^0.0.1"
datasets = "^2.15.0"
transformers = "^4.35.2"
huggingface-hub = "^0.19.4"
torch = "^2.1.1"
qdrant-client = "^1.6.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
